<resources>
    <string name="app_name">Hush</string>
    <string name="add_to_playlist">+</string>
    <string name="Test_Song_Name">Test Song Name which is very long and that is on purpose</string>
    <string name="Test_Artist_Name">Test Artist Name</string>
    <string name="pause">||</string>
    <string name="next">>></string>
    <string name="prev">&lt;&lt;</string>
    <string name="playlist"> <u> Very Long Playlist Name </u> </string>
    <string name="play">!></string>
    <string name="topText">All Songs</string>
    <string name="search_hint">Enter Song Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
