<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.example.elied.hush.DisplaySongFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            tools:ignore="contentDescription"
            android:id="@+id/pic"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:src= "@drawable/fallback_cover"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Test_Song_Name"
            android:padding="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:text="@string/Test_Artist_Name"
            android:layout_gravity="center"
            android:layout_below="@+id/song_title"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/pause"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/song_artist"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/pause"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/play"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/song_artist"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/play"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick=""
            android:layout_gravity="center"
            android:layout_alignBaseline="@+id/pause"
            android:layout_alignBottom="@+id/pause"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="19dp"
            android:layout_marginEnd="19dp"
            android:text="@string/next"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="playPrevious"
            android:layout_alignBaseline="@+id/next"
            android:layout_alignBottom="@+id/next"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/prev"
            android:textStyle="bold"/>

        <ImageButton
            tools:ignore="contentDescription"
            android:id="@+id/hide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_expand_more_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</FrameLayout>
