<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context="com.example.elied.hush.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@drawable/rounded_layout"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/pic"
            tools:ignore="contentDescription"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:src= "@drawable/fallback_cover"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />
       <LinearLayout
           android:layout_width="wrap_content"
           android:orientation="vertical"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/song_title"
               android:layout_width="220dp"
               android:layout_height="wrap_content"
               android:fontFamily="sans-serif-condensed"
               android:ellipsize="end"
               android:maxLines="1"
               android:textColor="@android:color/black"
               android:textSize="20sp"
               android:textStyle="bold"
               android:text="@string/Test_Song_Name"/>
           <TextView
               android:id="@+id/song_artist"
               android:layout_width="220dp"
               android:layout_height="wrap_content"
               android:ellipsize="end"
               android:maxLines="1"
               android:textStyle="italic"
               android:fontFamily="sans-serif-condensed"
               android:textColor="?android:attr/textColorSecondary"
               android:textSize="18sp"
               android:text="@string/Test_Artist_Name"/>

       </LinearLayout>

        <Button
            android:id="@+id/pause"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textColor="@android:color/black"
            android:bottomRightRadius="64dp"
            android:bottomLeftRadius="64dp"
            android:topRightRadius="64dp"
            android:topLeftRadius="64dp"
            android:onClick="addToPlaylist"
            android:textStyle="bold"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="20sp"
            android:textColorLink="@color/white"
            android:text="@string/pause"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

    </LinearLayout>
</FrameLayout>
